test/sema/typeck/class/self-with-type-params.dora
class Foo
impl Foo { fn f(): Foo { self[Foo] } }
